--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <label for="amount">Amount:</label>
     <input type="number" id="amount" name="amount" step="0.01" required><br><br>
 
-    <label for="date">Date:</label>
+    <label for="date"><Date:-></Date:-></label>
     <input type="date" id="date" name="date" required><br><br>
 
     <label for="description">Description:</label><br>
